added the recharts libray to our project

--- a/templates/dynamic-visualizer.html
+++ b/templates/dynamic-visualizer.html
@@ -1,1 +1,1 @@
-<script src="{{ url_for('static', filename= 'react/dynamic_visualizer.js') }}"></script>
+<script type="text/babel" src="{{ url_for('static', filename= 'react/dynamic_visualizer.js') }}"></script>
