--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
     <link rel="manifest" href="{{ url_for('static', filename= 'favicon/site.webmanifest') }}">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
+
     <!-- jQuery Google CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -33,6 +37,11 @@
     <!-- React Packages -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+    <!-- Chart Packages -->
+    <script src="https://unpkg.com/react/umd/react.production.min.js"></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"></script>
+    <script src="https://unpkg.com/prop-types/prop-types.min.js"></script>
+    <script src="https://unpkg.com/recharts/umd/Recharts.js"></script>
     <!-- TOPNAV -->
     {% include 'navbar.html' %}
     <!-- body-content -->
