--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -32,6 +32,9 @@
                 <li class="nav-item">
                     <a class="nav-link {% if title == 'Status' %} active {% endif %}" aria-current="page" href="{{ url_for('status_view') }}">Collection Status</a>
                 </li>
+                <li class ="nav-item">
+                    <a class="nav-link {% if title == 'Reports' %} active {%endif %}" aria-current="page" href="{{url_for('view_reports') }}">Reports</a>
+                </li>
                 <!-- .junk->NAVBAR_EXTRAS -->
             </ul>
             <form class="d-flex" method="get" action="?">
