--- a/templates/status.html
+++ b/templates/status.html
@@ -128,6 +128,8 @@
                     data.addRow([repo['repo_name'], repo['pull_requests_missing']]);
                 }
             }
+		
+	    data.sort({column: 1});
 
             options = {
 			  title: "Missing pull requests",
