--- a/templates/repos-table.html
+++ b/templates/repos-table.html
@@ -32,6 +32,8 @@
     {"title" : "Commits", "key" : "commits_all_time"},
     {"title" : "Issues", "key" : "issues_all_time"},
     {"title" : "Change Requests"}] -%}
+    Bearsss
+
 <div class="rounded w3-animate-opacity" style="background-color: white; overflow: auto;">
     <table class="table table-striped table-bordered">
         <!-- Table header start -->
