--- a/templates/status.html
+++ b/templates/status.html
@@ -203,7 +203,7 @@
                     data.addRow([repo['repo_name'], 1 - repo['ratio_issues']]);
                 }
             }
-
+            data.sort();
             options = {
                 chart: {
                     title: 'Ratio of collected to total pull requests'
