--- a/templates/status.html
+++ b/templates/status.html
@@ -203,7 +203,7 @@
                     data.addRow([repo['repo_name'], 1 - repo['ratio_issues']]);
                 }
             }
-            data.sort();
+            data.sort({column: 1});
             options = {
                 chart: {
                     title: 'Ratio of collected to total pull requests'
@@ -252,14 +252,14 @@
                 },
                 hAxis: {
                     title: 'Repos',
-		    scaleType: 'log',
-		    ticks: [0, 25, 400, 1000, 12000]
-                },
-                vAxis: {
-                    title: 'Number of datapoints'
-                }
-            };
-            var materialChart = new google.charts.Bar(document.getElementById('issues_div'));
+                scaleType: 'log',
+                ticks: [0, 25, 400, 1000, 12000]
+                    },
+                    vAxis: {
+                        title: 'Number of datapoints'
+                    }
+                };
+            var materialChart = new google.visualization.BarChart(document.getElementById('issues_div'));
             materialChart.draw(data, options);
 
             // ------------------------------------------------- ISSUES TIMELINE
