--- a/templates/status.html
+++ b/templates/status.html
@@ -208,17 +208,17 @@
                 chart: {
                     title: 'Ratio of collected to total pull requests'
                 },
-                hAxis: {
+                vAxis: {
                     title: 'Repos'
                 },
-                vAxis: {
+                hAxis: {
                     title: 'Ratio',
                     format:'#%',
                     min:0,
                     max:1
                 }
             };
-            materialChart = new google.charts.Bar(document.getElementById('pull_requests_div_3'));
+            materialChart = new google.charts.BarChart(document.getElementById('pull_requests_div_3'));
             materialChart.draw(data, options);
 
             //----------------------------------------------------- Single Repo Stats
