--- a/templates/status.html
+++ b/templates/status.html
@@ -218,7 +218,7 @@
                     title: 'Repos'
                 },
             };
-            materialChart = new google.charts.BarChart(document.getElementById('pull_requests_div_3'));
+            materialChart = new google.visualization.BarChart(document.getElementById('pull_requests_div_3'));
             materialChart.draw(data, options);
 
             //----------------------------------------------------- Single Repo Stats
