--- a/templates/pr_stacked_bar.html
+++ b/templates/pr_stacked_bar.html
@@ -115,7 +115,17 @@
 
         // Instantiate and draw our chart, passing in some options.
         var chart = new google.charts.Bar(document.getElementById('chart_div'));
-        chart.draw(table_data, google.charts.Bar.convertOptions(options));
+
+        var div = document.getElementById('spinner');
+        div.remove();
+
+        var converted_options = google.charts.Bar.convertOptions(options)
+
+        chart.draw(table_data, converted_options);
+
+        window.addEventListener('resize', function () {
+            chart.draw(table_data, converted_options);
+        }, false);
       }
     </script>
   </head>
