Fix div reference
Signed-off-by: Andrew Brain <61482022+ABrain7710@users.noreply.github.com>

--- a/templates/pr_stacked_bar.html
+++ b/templates/pr_stacked_bar.html
@@ -104,7 +104,7 @@
             };
 
             // Instantiate and draw our chart, passing in some options.
-            var chart = new google.charts.Bar(document.getElementById('chart_div'));
+            var chart = new google.charts.Bar(document.getElementById('pr_stacked_bar'));
 
             var div = document.getElementById('spinner');
             div.remove();
